--- a/basicIDE/Dockerfile
+++ b/basicIDE/Dockerfile
@@ -1,4 +1,10 @@
-FROM alpine:3.17.0
-RUN apk update
-RUN apk add --no-cache neovim vim nodejs clang make
+FROM node:19-bullseye-slim
+
+RUN apt-get update
+RUN apt-get install -y neovim clang make g++ python3 curl git
+
+COPY init.vim /root/.config/nvim/init.vim
+RUN sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
+       https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
+
 CMD [ "nvim" ]
